[package]
name = "memento"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merchant = { path = "../merchant" }
anyhow = "1.0.58"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["net", "rt-multi-thread", "sync", "signal", "time"] }
# tokio-util = { version = "0.7", features = ["full"] }
# tokio-stream = { version = "0.1" }

tracing = "0.1"
unique_id = "0.1.4"
