[package]
name = "memento"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
thiserror = "1.0.31"
async-trait = "0.1.56"
readonly = "0.2.1"
tracing = "0.1"
unique_id = "0.1.4"

# Async-related dependencies
tokio = { version = "1.19.2", features = ["macros", "net", "rt-multi-thread", "sync", "signal", "time"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}

# Serialization/Deserialization-related dependencies
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
